style fixes for body overflow

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -12,7 +12,8 @@ canvas {
   position: absolute;
   top: 0;
   width: 100%;
-  z-index: -1; }
+  z-index: -1;
+  height: 100vh; }
 
 body {
   display: -webkit-box;
@@ -27,7 +28,7 @@ body {
   margin: 0 auto;
   max-width: 60rem;
   padding: 2em;
-  height: 100vh; }
+  overflow: hidden; }
 
 .date--container {
   float: right;
@@ -201,7 +202,7 @@ body {
     color: #caf;
     cursor: pointer;
     font-size: 1.5em;
-    margin: 0 .2em;
+    margin: 0 .25em;
     position: absolute;
     opacity: .8;
     right: 0;
@@ -212,7 +213,7 @@ body {
     @media (min-width: 26rem) {
       .sidebar--icon {
         font-size: 2.5em;
-        margin-left: 1em 1.5em; } }
+        margin: 0 .2em; } }
   .sidebar[data-state='open'] {
     left: 0;
     margin-left: 0; }
