--- a/scss/_sidebar.scss
+++ b/scss/_sidebar.scss
@@ -41,7 +41,7 @@
     cursor: pointer;
     font-size: 1.5em;
     // height: 2em;
-    margin: 0 .2em;
+    margin: 0 .25em;
     position: absolute;
     opacity: .8;
     right: 0;
@@ -52,7 +52,7 @@
 
     @include larger-than(small) {
       font-size: 2.5em;
-      margin-left: 1em 1.5em;
+      margin: 0 .2em;
     }
   }
 
